refactored code for ease of development. added license and readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.poetry]
 name = "pseudo_dome_pattern_generator"
 version = "0.1.0"
+license = "GPL-3.0-or-later"
 description = ""
 authors = ["sinanus <sinankaraveli@gmail.com>"]
 readme = "README.md"
