change project name to reflect repo name change

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pseudo_dome_pattern_generator"
+name = "ori-kin"
 version = "0.1.0"
 license = "GPL-3.0-or-later"
 description = ""
