--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ numpy = "^2.1.2"
 pandas = "^2.2.3"
 gunicorn = "^23.0.0"
 ezdxf = "^1.3.4"
+pyyaml = "^6.0.2"
+dash-bootstrap-components = "^1.7.1"
 
 
 [build-system]
